orchestration/redis-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
  template:
      metadata:
        labels:
          name: redis-pod
      spec:
        containers:
        - image: redis:3
          name: redis
