orchestration/dnmonster-service.yml

---
apiVersion: v1
kind: Service
metadata:
  name: dnmonster
spec:
  selector:
    name: dnmonster-pod
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
