orchestration/identidock-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: identidock
spec:
  type: NodePort
  selector:
    name: identidock-pod
  ports:  
  - port: 80
    targetPort: 9090
    protocol: TCP
