orchestration/redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    name: redis-pod
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
