orchestration/identidock-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: identidock
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: identidock
          servicePort: 80
